[tool.poetry]
name = "mqtt-device-cluster"
version = "0.2.4"
description = "Module for managing a cluster of devices via MQTT"
authors = ["toxazhl <zhltoxa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
aiomqtt = "^1.2.1"
msgpack = "^1.0.7"
pydantic = ">=2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
