[tool.poetry]
name = "mqtt-device-cluster"
version = "0.2.8"
description = "Module for managing a cluster of devices via MQTT"
authors = ["toxazhl <zhltoxa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.0.7"
pydantic = ">=2.4.1"
fastmqtt = {git = "https://github.com/toxazhl/fastmqtt"}
pytest-mqtt = "^0.3.1"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"


[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
