[tool.poetry]
name = "npc-control-hub"
version = "0.3.0"
description = "Control hub for NPCs"
authors = ["toxazhl <zhltoxa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
msgpack = "^1.0.7"
pydantic = ">=2.4.1"
fastmqtt = {git = "https://github.com/toxazhl/fastmqtt"}


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
